REGRESSION(r268923): [WPE] Nothing renders on the rpi3 using the proprietary video driver https://bugs.webkit.org/show_bug.cgi?id=219739

Reviewed by Carlos Garcia Campos.

Rewrite the GLSL code to perform rounded rectangle clipping so it works with the limitations
of the raspberrypi3 proprietary video driver.

* platform/graphics/texmap/TextureMapperShaderProgram.cpp:


Canonical link: https://commits.webkit.org/232338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270675 268f45cc-cd09-0410-ab3c-d52691b4dbfc